objects/vlocity_ins__CachedFilterableAttribute__c.object
<CustomObject>
    <description>System object used as a persistent cache of filterable product attributes.</description>
    <fields>
        <fullName>vlocity_ins__AttributeCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>AttributeId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AutoComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AutoComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CategoryCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CategoryCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CategoryDisplaySequence__c</fullName>
        <label>CategoryDisplaySequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CategoryId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CategoryId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CategoryName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CategoryName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DataType</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplaySequence__c</fullName>
        <label>DisplaySequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FormatMask__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>FormatMask</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__HasRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InputType__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>InputType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JSONValues__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>JSONValues</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Label__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Max__c</fullName>
        <label>Max</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Maxlength__c</fullName>
        <label>Maxlength</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Min__c</fullName>
        <label>Min</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Multiselect__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multiselect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Pattern__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Placeholder__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Pricebook2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Cached Filterable Attribute</relationshipLabel>
        <relationshipName>AttributeCached</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cached Filterable Attribute</relationshipLabel>
        <relationshipName>CachedFilterableAttribute</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Readonly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Readonly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Step__c</fullName>
        <label>Step</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Cached Filterable Attribute</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cached Filterable Attribute</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>